Checkpoint do desafio

--- a/react/01/01-desafio/desafio-01/src/components/List.module.css
+++ b/react/01/01-desafio/desafio-01/src/components/List.module.css
@@ -70,12 +70,14 @@
   color: #FFF;
   background: var(--gray-500);
   border-radius: 8px;
-  width: 1.5rem;
+  width: 5rem;
 }
 
 .taskList {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .clipboard{
   justify-content: center;
